--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "arslan",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@prisma/client": "^5.19.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
